# crucible

./: .env.example  .gitignore  README.md
api/: Dockerfile  package-lock.json  package.json
api/src/: index.ts
api/src/lib/: db.ts  redis.ts
api/src/queue/: trials.ts
api/src/routes/: agents.ts  auth.ts  leaderboard.ts  trials.ts
api/src/stream/: combatLog.ts
db/: migrate.sh
db/migrations/: 001_initial.sql  002_seed_corpus.sql  003_system_prompt.sql  004_ai_attacker_vectors.sql
engine/: Dockerfile  pyproject.toml  settings.py  worker.py
engine/adapters/: ai_attacker_adapter.py  base.py  garak_adapter.py  pyrit_adapter.py  registry.py
engine/detector/: oracles.py
engine/harness/: connector.py
engine/orchestrator/: run.py  types.py
engine/scoring/: report.py  temper.py
frontend/: Dockerfile  index.html  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AttackProgress.tsx  AttackerThinking.tsx  CombatLog.tsx  FractureOverlay.tsx  Layout.tsx  Logo.tsx  MarkStamp.tsx  PhaseAnnouncer.tsx  PixelBurst.tsx  PixelDamage.tsx  SkullFurnace.tsx  TemperBar.tsx
infra/: docker-compose.prod.yml  docker-compose.yml  nginx-crucible.conf
mock_agent/: Dockerfile  server.py
scripts/: deploy.sh  e2e_smoke.py  github_hunt.py  migrate_corpus_v2.py  recalc_scores.py  seed_batch3.py  seed_batch4.py  seed_crypto_agents.py  seed_leaked_prompts.py  seed_real_agents.py  setup_local.sh  setup_ssl.sh  twitter_attack_bot.py
(+14 files in other folders)
