[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crucible-engine"
version = "0.1.0"
description = "CRUCIBLE attack engine — wraps PyRIT / garak / promptfoo / DeepTeam"
requires-python = ">=3.11"
dependencies = [
  # Queue
  "redis>=5.0",
  "rq>=1.16",
  # HTTP / async
  "httpx>=0.27",
  "anyio>=4.4",
  # OpenAI-compatible client (attacker model + target harness)
  "openai>=1.40",
  # Postgres
  "psycopg[binary,pool]>=3.1",
  # Object storage
  "boto3>=1.34",
  # Attack frameworks
  "garak>=0.9",
  "pyrit>=0.5",
  "deepteam>=0.1",
  # Utils
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.2",
  "tenacity>=8.4",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-anyio>=0.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
